--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-windows": "^1.0.0-beta.8",
     "qrcode-terminal": "^0.12.0",
+    "sqlite3": "^5.1.7",
     "whatsapp-web.js": "^1.23.0"
   }
 }
